--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-LPGMSO2\\SQLEXPRESS;Database=CustomerProductOrder;Integrated Security=SSPI;TrustServerCertificate=true;"
   }
 }
